--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
     </main>
 
     <footer>
-
+        <div class="footer-content">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </div>
     </footer>
 </body>
 </html>
